--- a/css/home_page.css
+++ b/css/home_page.css
@@ -1,8 +1,9 @@
+/* ---------------------- STYING FOR THE HOME PAGE ---------------------------*/
 #featured-products {
   text-align: center;
 }
 
-/* flex box css*/
+/* Flex box CSS*/
 .flex-box {
   display: flex;
   margin: 5em;
@@ -10,7 +11,7 @@
   justify-content: center;
 }
 
-/*make the items display vertically on a smaller screen size*/
+/* Make the items display vertically on a smaller screen size */
 @media screen and (min-width: 35em) {
   .flex-box{
     flex-direction: column;
@@ -27,9 +28,7 @@
 }
 
 
-
-/*carousel css*/
-
+/* Carousel CSS */
 .slide-images-1{
   width:100%;
 }
@@ -65,6 +64,7 @@
   margin-top: -2em;
   padding: 16px;
   color: white;
+  background-color: #CCB2D5; /* Lilac */
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
@@ -80,7 +80,7 @@
   border-radius: 3px 0 0 3px;
 }
 
-/* On hover, add a black background color with a little bit see-through */
+/* On hover, add a purple background color */
 .prev:hover, .next:hover {
   background-color: #86538C;  /* Purple */
 }
