--- a/css/main.css
+++ b/css/main.css
@@ -1,36 +1,34 @@
-/* LOGO AND TITLE -------------------------------------
-*/
+/*-------------------------- LOGO AND TITLE ----------------------------------*/
+
 header {
   background: #CCB2D5; /* Lilac */
 }
 
 .title img {
-  float: left;
+  margin: 1em;
   padding-bottom: 0;
   padding-right: 0.5em;
-  margin: 1em;
+  float: left;
   width: 5em;
 }
 
 .title h1 {
-  position: relative;
+  margin: 0;
   padding: 0;
   padding-top: 1em;
   padding-left: 0;
-  margin: 0;
+  position: relative;
   color: #86538C; /* Purple */
 }
 
-/*
-  STYLE GUIDE STYLING ----------------------------------
-  Default styling for the style guide
-*/
+/*------------------------ DEFAULT STYLING FOR PAGE --------------------------*/
+
 body {
-  background-color: white;
-  font-family: 'Montserrat', sans-serif;
-  padding:0;
   margin:0;
+  padding:0;
+  background-color: white;
   color: #7F7F7F; /* Grey */
+  font-family: 'Montserrat', sans-serif;
   line-height: 2;
 }
 
@@ -79,8 +77,7 @@ code {
   text-align: center;
 }
 
-/* BRANDING -----------------------------------
-*/
+/*------------------------------- BRANDING -----------------------------------*/
 
 #main-colour{
   color: #7F7F7F; /* Grey */
@@ -116,7 +113,11 @@ code {
   padding-right:2em;
 }
 
-/*fonts*/
+.logos {
+  max-width: 15%;
+}
+
+/*----------------------------- FONT STYLING ---------------------------------*/
 
 .highlight {
   color:#ffffff;
@@ -147,14 +148,8 @@ code {
   color: #7F7F7F; /* Grey */
 }
 
-.logos {
-  max-width: 15%;
-}
 
-
-/*
-  INTERACTIVE ELEMENTS -------------------
-*/
+/* ------------------------- INTERACTIVE ELEMENTS ----------------------------*/
 
 /*in-text link*/
 .in-text-link {
@@ -166,17 +161,7 @@ code {
   color: #F8E392; /* Yellow */
 }
 
-.social-media-link {
-  color: #F8E392; /* Yellow */
-  text-decoration: none;
-}
-
-.social-media-link:hover, .social-media-link:focus, .social-media-link:active {
-  color: #CCB2D5; /* Lilac */
-}
-
 /*navigation button*/
-
 .button-nav {
   display: inline-block;
   padding: 0.5rem;
@@ -251,10 +236,6 @@ code {
 .radio-label {
   color: #86538C;  /* Purple */
 }
-
-
-
-
 
 select {
   font: 16px 'Montserrat', sans-serif;
@@ -337,26 +318,15 @@ input[type='radio']:after {
   width: 40%;
 }
 
-/*
-  TEXT ELEMENTS -------------------
-*/
-
 /*headings*/
 h1, h2 {
   color: #FEB664; /* Orange */
   font-family: 'Yeseva One', cursive;
 }
 
-/*paragraphs*/
-
-/*numbered lists*/
-
-/*
-  COMBINED ELEMENTS -------------------
-*/
+/* -------------------------- COMBINED ELEMENTS ------------------------------*/
 
 /*main navigation*/
-
 .navigation {
   padding: 0.5em;
   background-color: #86538C; /* Purple */
@@ -411,7 +381,6 @@ h1, h2 {
 /*payment form*/
 
 /* shopping cart css */
-
 table {
   width: 70%;
 }
@@ -428,7 +397,7 @@ tr:nth-child(even) {
   background-color: #f2f2f2;
 }
 
-/* FOOTER STYLING */
+/* ------------------------------- FOOTER STYLING ----------------------------*/
 footer {
   background-color: #86538C; /* Purple */
   padding: 3em;
@@ -450,6 +419,16 @@ footer {
   width: 2em;
   height: 2em;
   padding-right: .5em;
+}
+
+/*links for social media in footer */
+.social-media-link {
+  color: #F8E392; /* Yellow */
+  text-decoration: none;
+}
+
+.social-media-link:hover, .social-media-link:focus, .social-media-link:active {
+  color: #CCB2D5; /* Lilac */
 }
 
 /* make the social media links into a column on small screen sizes*/
