--- a/css/products.css
+++ b/css/products.css
@@ -30,8 +30,18 @@
 }
 
 .product-img {
-  width: 50%;
-  height: 50%;
+  width: 100%;
+  height: 100%;
+}
+
+.detailed-product-img {
+  width: 25%;
+  height: 25%;
+  margin: 1em;
+}
+
+.product-title {
+  margin:1em;
 }
 
 /*make the items display vertically on a smaller screen size*/
@@ -52,25 +62,31 @@
     .container4 {
       flex-direction: column;
       padding-top: 3em;
+      text-align: center;
+      align-items: center;
+      justify-content: center;
     }
 
     .product_description {
-      margin-left: 0;
-    }
-
-    .product_description {
-      padding-right: 10em;
       text-align: center;
       align-items: center;
       justify-content: center;
     }
 
     .description {
-      margin-left: 2em;
+      display: inline-block;
+      text-align: center;
+      align-items: center;
+      justify-content: center;
     }
 
     .desc {
       text-align: center;
+    }
+
+    .detailed-product-img {
+      width: 50%;
+      height: 50%;
     }
 }
 
@@ -104,18 +120,21 @@
     }
 
     .product_description {
-      padding-right: 10em;
       text-align: center;
       align-items: center;
       justify-content: center;
     }
 
     .description {
-      margin-left: 3em;
     }
 
     .desc {
       text-align: center;
+    }
+
+    .detailed-product-img {
+      width: 40%;
+      height: 40%;
     }
 
 }
@@ -144,6 +163,11 @@
   .container4 {
     flex-direction: row;
     flex-wrap: nowrap;
+  }
+
+  .detailed-product-img {
+    width: 25%;
+    height: 25%;
   }
 }
 
@@ -181,7 +205,6 @@ h3 {
 
 /* create space between the product image and product description*/
 .product_description {
-  margin-left: 10em;
 }
 
 #detailed_view {
